@@ -26,14 +26,12 @@
   <block id="ad8bcd8268bd244944d22d0323e8d319" category="paragraph"><block ref="ad8bcd8268bd244944d22d0323e8d319" category="inline-image-macro-rx" type="image"></block></block>
   <block id="95c3127441b4989e3d78b50920629c66" category="summary">복제 서비스의 새로운 기능에 대해 알아보십시오.</block>
   <block id="490414e0366b091220802d406e52c076" category="doc">새로운 기능</block>
-  <block id="3b7a1a77cdd08778e0827fbf312442b7" category="section-title">2021년 9월 2일</block>
   <block id="6c88f9e17d9019e00177d64f9db55d2e" category="section-title">ONTAP용 Amazon FSx 지원</block>
   <block id="59dfc17500b1e0b8d1824eb8b1413080" category="paragraph">이제 Cloud Volumes ONTAP 시스템 또는 온프레미스 ONTAP 클러스터에서 ONTAP 파일 시스템용 Amazon FSx로 데이터를 복제할 수 있습니다.</block>
   <block id="5057fdb214d9f3773bc386ba2aa1fcb0" category="section-title">2021년 5월 5일</block>
   <block id="1473f0729c8bea54a5077a19ab764c47" category="section-title">인터페이스가 재설계되었습니다</block>
   <block id="5a0a1bceb9fa4494f5bd231c6eb87a5b" category="paragraph">사용 편의성과 Cloud Manager 사용자 인터페이스의 현재 모양과 느낌을 맞추기 위해 Replication 탭을 다시 설계했습니다.</block>
   <block id="0f9405518138d20fd96d78fe19dabf84" category="inline-image-macro">볼륨 관계 목록을 보여 주는 Cloud Manager의 재설계된 복제 탭 스크린샷</block>
-  <block id="ad0ba121971067cff2f6c3263f846473" category="paragraph"><block ref="ad0ba121971067cff2f6c3263f846473" category="inline-image-macro-rx" type="image"></block></block>
   <block id="958c15a697dc50afc44ab3fe2e061aec" category="summary">두 시스템 간에 데이터 복제를 설정한 후에는 Cloud Manager에서 데이터 복제 일정과 관계를 관리할 수 있습니다.</block>
   <block id="2e4ca84ff13f65389599985c5d2a9f08" category="doc">일정 및 관계 관리</block>
   <block id="f3a29486bed19a90f2da6d007818b427" category="list-title">단계</block>
@@ -189,4 +187,8 @@
   <block id="dd490b81914dd945601e442a41cb4222" category="sidebar">NetApp 커뮤니티</block>
   <block id="ff6c37cbc252e306a6b4e390ec13cbc1" category="sidebar">Cloud Central 블로그</block>
   <block id="ad203e818e0c9d7f42f1c260b33875f3" category="sidebar">클라우드 웨비나</block>
+  <block id="d798cbf5a08fbeb9fdd3652e5b00bb4c" category="section-title">2021년 9월 2일</block>
+  <block id="40f78d193b858589ad7df4dd4ce61ad6" category="inline-link">데이터 복제를 설정하는 방법에 대해 알아보십시오</block>
+  <block id="1e56755e05ec049b30c49b9d53744ca1" category="paragraph"><block ref="0337e364432fca0f343e5f2660661b77" category="inline-link-rx"></block>.</block>
+  <block id="afd129f297b503a0e765f8dcc6f0d4d4" category="paragraph"><block ref="afd129f297b503a0e765f8dcc6f0d4d4" category="inline-image-macro-rx" type="image"></block></block>
 </blocks>
